projects/backups/backup-config-files/http.vlabs.ac.in/etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Thu Nov 29 11:57:14 2012
*filter
:INPUT ACCEPT [324:27648]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [174:23414]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 5666 -j ACCEPT
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Thu Nov 29 11:57:14 2012
